@@ -1,3 +1,10 @@
+2009-04-01  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
+
+        Unreviewed build fix. Fix make distcheck, after the gtk-doc
+        integration.
+
+        * GNUmakefile.am:
+
 2009-03-30  Gustavo Noronha Silva <gustavo.noronha@collabora.co.uk>
 
         Reviewed by Holger Freyther.
